--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsdom": "^24.1.0",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
+    "sass-embedded": "^1.77.8",
     "typescript": "~5.4.0",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.3.1",
